@@ -27,6 +27,7 @@ network_admin_SOURCES = 			\
 	network-iface-wireless.c network-iface-wireless.h	\
 	network-iface-irlan.c network-iface-irlan.h		\
 	network-iface-plip.c network-iface-plip.h		\
+	network-iface-modem.c network-iface-modem.h		\
 	ifaces-list.c ifaces-list.h		\
 	callbacks.c callbacks.h			\
 	connection.c connection.h		\
